[package]
name = "konfg"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
md-5 = "0.10"
minijinja = { version = "2", features = ["builtins"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
toml = "0.8"
anyhow = "1"
java-properties = "1"
dotenvy = "0.15.7"